--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "url": "git+https://github.com/raresportan/homepage.git"
   },
   "scripts": {
-    "build": "gatsby build",
+    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "develop": "gatsby develop",
     "start": "npm run develop",
     "serve": "gatsby serve",
