--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
   "dependencies": {
     "gatsby": "^2.21.22",
     "gatsby-image": "^2.4.3",
+    "prismjs": "^1.20.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
+    "typeface-ibm-plex-sans": "0.0.75"
+  },
+  "devDependencies": {
+    "prettier": "2.0.5",
     "gatsby-plugin-advanced-sitemap": "^1.5.4",
     "gatsby-plugin-feed": "^2.5.1",
     "gatsby-plugin-google-analytics": "^2.3.1",
@@ -27,16 +35,7 @@
     "gatsby-remark-smartypants": "^2.3.1",
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-transformer-remark": "^2.8.7",
-    "gatsby-transformer-sharp": "^2.5.2",
-    "prismjs": "^1.20.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "react-typography": "^0.16.19",
-    "typeface-ibm-plex-sans": "0.0.75"
-  },
-  "devDependencies": {
-    "prettier": "2.0.5"
+    "gatsby-transformer-sharp": "^2.5.2"
   },
   "homepage": "https://github.com/raresportan/homepage",
   "keywords": [
