Fix homepage in package.json

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "gatsby-transformer-remark": "^2.8.7",
     "gatsby-transformer-sharp": "^2.5.2"
   },
-  "homepage": "https://github.com/raresportan/homepage",
+  "homepage": "https://raresportan.com",
   "keywords": [
     "gatsby"
   ],
