--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "typeface-ibm-plex-sans": "0.0.75"
   },
   "devDependencies": {
-    "prettier": "2.0.5",
     "gatsby-plugin-advanced-sitemap": "^1.5.4",
     "gatsby-plugin-feed": "^2.5.1",
     "gatsby-plugin-google-analytics": "^2.3.1",
@@ -25,6 +24,7 @@
     "gatsby-plugin-offline": "^3.2.1",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sharp": "^2.6.2",
+    "gatsby-plugin-twitter-card": "^1.0.4",
     "gatsby-plugin-typography": "^2.5.1",
     "gatsby-remark-copy-linked-files": "^2.3.2",
     "gatsby-remark-external-links": "0.0.4",
@@ -35,7 +35,8 @@
     "gatsby-remark-smartypants": "^2.3.1",
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-transformer-remark": "^2.8.7",
-    "gatsby-transformer-sharp": "^2.5.2"
+    "gatsby-transformer-sharp": "^2.5.2",
+    "prettier": "2.0.5"
   },
   "homepage": "https://raresportan.com",
   "keywords": [
