--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "url": "https://github.com/raresportan/homepage/issues"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.5",
+    "@mdx-js/react": "^1.6.5",
     "gatsby": "^2.21.22",
     "gatsby-image": "^2.4.3",
+    "gatsby-plugin-mdx": "^1.2.13",
     "prismjs": "^1.20.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -19,6 +22,7 @@
   "devDependencies": {
     "gatsby-plugin-advanced-sitemap": "^1.5.4",
     "gatsby-plugin-feed": "^2.5.1",
+    "gatsby-plugin-feed-mdx": "^1.0.1",
     "gatsby-plugin-google-analytics": "^2.3.1",
     "gatsby-plugin-manifest": "^2.4.2",
     "gatsby-plugin-offline": "^3.2.1",
@@ -30,13 +34,13 @@
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^3.3.2",
     "gatsby-remark-prismjs": "^3.5.1",
-    "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-remark-responsive-iframe": "^2.4.2",
     "gatsby-remark-smartypants": "^2.3.1",
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-transformer-remark": "^2.8.7",
     "gatsby-transformer-sharp": "^2.5.2",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "remark-capitalize": "^1.1.0"
   },
   "homepage": "https://raresportan.com",
   "keywords": [
