--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "raresportan",
   "private": true,
   "description": "Rares Portan's homepage",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "Rares Portan <rares.portan@gmail.com>",
   "bugs": {
     "url": "https://github.com/raresportan/homepage/issues"
@@ -17,12 +17,13 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "typeface-ibm-plex-sans": "0.0.75"
+    "netlify-lambda": "^1.6.3",
+    "typeface-ibm-plex-sans": "0.0.75",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "gatsby-plugin-feed": "^2.5.1",
     "gatsby-plugin-feed-mdx": "^1.0.1",
-    "gatsby-plugin-google-analytics": "^2.3.1",
     "gatsby-plugin-manifest": "^2.4.2",
     "gatsby-plugin-offline": "^3.2.1",
     "gatsby-plugin-react-helmet": "^3.3.1",
@@ -39,6 +40,8 @@
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-transformer-remark": "^2.8.7",
     "gatsby-transformer-sharp": "^2.5.2",
+    "http-proxy-middleware": "^1.0.4",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.0.5",
     "remark-capitalize": "^1.1.0"
   },
@@ -53,9 +56,13 @@
     "url": "git+https://github.com/raresportan/homepage.git"
   },
   "scripts": {
-    "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
+    "build": "run-p build:**",
+    "build:app": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
+    "build:lamda": "netlify-lambda build src/lambda",
     "develop": "gatsby develop",
-    "start": "npm run develop",
+    "start": "run-p start:**",
+    "start:app": "npm run develop",
+    "start:lambda": "netlify-lambda serve src/lambda",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
