--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "netlify-lambda": "^1.6.3",
-    "typeface-ibm-plex-sans": "0.0.75",
-    "node-fetch": "^2.6.0"
+    "typeface-ibm-plex-sans": "0.0.75"
   },
   "devDependencies": {
     "gatsby-plugin-feed": "^2.5.1",
@@ -41,6 +39,8 @@
     "gatsby-transformer-remark": "^2.8.7",
     "gatsby-transformer-sharp": "^2.5.2",
     "http-proxy-middleware": "^1.0.4",
+    "netlify-lambda": "^1.6.3",
+    "node-fetch": "^2.6.0",
     "npm-run-all": "^4.1.5",
     "prettier": "2.0.5",
     "remark-capitalize": "^1.1.0"
