--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "prismjs": "^1.20.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "typeface-ibm-plex-sans": "0.0.75"
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "gatsby-plugin-feed": "^2.5.1",
