--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/react": "^1.6.5",
     "gatsby": "^2.21.22",
     "gatsby-image": "^2.4.3",
+    "gatsby-plugin-canonical-urls": "^2.3.10",
     "gatsby-plugin-mdx": "^1.2.13",
     "gatsby-plugin-no-javascript": "^2.0.5",
     "prismjs": "^1.21.0",
