--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.5",
     "@mdx-js/react": "^1.6.5",
+    "encoding": "^0.1.13",
     "gatsby": "^2.24.65",
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-canonical-urls": "^2.3.10",
