Gatsby image plugin

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "babel-eslint": "^10.1.0",
     "encoding": "^0.1.13",
     "gatsby": "^3.0.0",
-    "gatsby-image": "^3.11.0",
     "gatsby-plugin-canonical-urls": "^3.11.0",
+    "gatsby-plugin-image": "^1.11.0",
     "gatsby-plugin-mdx": "^2.11.0",
     "gatsby-plugin-no-javascript": "^2.0.5",
     "gatsby-plugin-postcss": "^4.11.0",
