--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "acorn": "^8.4.1",
     "babel-eslint": "^10.1.0",
     "encoding": "^0.1.13",
-    "gatsby": "^3.11.1",
+    "gatsby": "^3.14.2",
     "gatsby-plugin-canonical-urls": "^3.11.0",
     "gatsby-plugin-image": "^1.11.0",
     "gatsby-plugin-mdx": "^2.11.0",
@@ -22,7 +22,7 @@
     "gatsby-plugin-postcss": "^4.11.0",
     "postcss": "^8.3.6",
     "postcss-preset-env": "^6.7.0",
-    "prismjs": "^1.24.1",
+    "prismjs": "^1.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -34,7 +34,7 @@
     "gatsby-plugin-manifest": "^3.11.0",
     "gatsby-plugin-offline": "^4.11.0",
     "gatsby-plugin-react-helmet": "^4.11.0",
-    "gatsby-plugin-sharp": "^3.11.0",
+    "gatsby-plugin-sharp": "^3.14.1",
     "gatsby-plugin-sitemap": "^4.7.0",
     "gatsby-plugin-twitter-card": "^1.0.5",
     "gatsby-plugin-typography": "^3.11.0",
@@ -66,7 +66,7 @@
   },
   "scripts": {
     "build": "run-p build:**",
-    "build:app": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
+    "build:app": "gatsby build --log-pages",
     "build:lamda": "netlify-lambda build src/lambda",
     "develop": "gatsby develop",
     "start": "run-p start:**",
